--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -39,7 +39,8 @@
                   <% end %>
                   
                   <div class="index_button">
-                   <a class="button primary fit" href="posts/<%= post.id %>">See More Detail</a>
+                   <a class="button fit" href="posts/<%= post.id %>">See More Detail</a>
+                   <!-- <a class="button primary fit" href="posts/<%= post.id %>">See More Detail</a> -->
                   </div>
                 </div>          
               </div>
