--- a/app/views/dealzons/_sidebar_show.html.erb
+++ b/app/views/dealzons/_sidebar_show.html.erb
@@ -1,22 +1,25 @@
 <aside class="sidebar">
-    <!-- Blurb -->
+
     <section>
+      
       <h2>AMAZON QUICK SEARCH</h2>
-      <a href="#" class="image fit"><img src="https://pmcvariety.files.wordpress.com/2018/01/amazon-logo.jpg?w=1000" alt=""></a>
-      <p>Amazon offers thousands of great deals, but finding the best deal through endless pages might make you crazy. It offers a quick way to find the best deals on Amazon.</p>
-      <ul class="actions">
-        <li><a class="cta" href="#google">Quick Search</a></li>
-        <div id="google" class="modaloverlay">
-          <div class="modal">
-            <a href="#close" class="modal_close">&times;</a>
-            <div>
-              <h2>Quick way to find the best deals</h2>
-              <p>Amazon offers thousands of great deals, but finding the best deal through endless pages might make you crazy. It offers a quick way to find the best deals on Amazon. You are going to get awesome deals just by clicking on the percentage off next to the category you want to browse.</p>
-              <%= render 'shared/amazon_table' %>
+      <section data-group="modal-group">
+        <div class="container">
+          <a href="#" class="image fit"><img src="https://pmcvariety.files.wordpress.com/2018/01/amazon-logo.jpg?w=1000" alt=""></a>
+          <p>Amazon offers thousands of great deals, but finding the best deal through endless pages might make you crazy. It offers a quick way to find the best deals on Amazon.</p>
+          <a class="button btn-px open-modal" data-modal="modal">Quick Search</a>
+          <div class="modal-wrapper" data-wrapper="modal-wrapper-large">
+           <div class="modal-content">
+            <div class="modal-intro">
+             <h2>Quick way to find the best deals</h2>
+             <p>Amazon offers thousands of great deals, but finding the best deal through endless pages might make you crazy. It offers a quick way to find the best deals on Amazon. You are going to get awesome deals just by clicking on the percentage off next to the category you want to browse.</p>
             </div>
+            <%= render 'shared/amazon_table' %>
+           </div>
           </div>
         </div>
-      </ul>
+      </section>  
+
     </section>
 
     <section>
