--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -7,7 +7,7 @@
   <section class="main">
     
     <section>
-      <p class="notice">Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla lorem.</p>
+      <p class="notice"><I>Our website contains affiliate link which means that if you click on one of the product links and buy we’ll receive a small commission. This help supports us and allows us to continue to keep finding and sharing good deals.</I></p>
 
       <div class="header_blog_show">
         <h1><%= @blog.blog_title %></h1>
