--- a/app/views/dealzons/index.html.erb
+++ b/app/views/dealzons/index.html.erb
@@ -90,7 +90,7 @@
 
               
               <div class="index_button">
-              <a class="button primary fit" href="dealzons/<%= deal.id %>">See More Detail</a>
+              <a class="button fit" href="dealzons/<%= deal.id %>">See More Detail</a>
               </div>  
 
               <% if can? :update, deal %>
