--- a/app/views/dealzons/show.html.erb
+++ b/app/views/dealzons/show.html.erb
@@ -7,7 +7,7 @@
   <section class="main">
     
     <section>
-      <p class="notice">Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla lorem.</p>
+      <p class="notice"><I>Our website contains affiliate link which means that if you click on one of the product links and buy we’ll receive a small commission. This help supports us and allows us to continue to keep finding and sharing good deals.</I></p>
     
       <div class="show_detail_wrap">
         <div class="show_left">
@@ -76,8 +76,12 @@
 
           <div class="contents">
             <% if @dealzon.acategory_id == 4 %> 
-             <p><span class="show_bold"><%= @dealzon.am_title %></span> is on sale now for <span class="show_bold">$<%= @dealzon.am_price_is %></span> at Amazon. If you use this promo code, you could save <span class="show_bold"><%= @dealzon.am_price_sale %>% off</span> more.</p>
-             <p><span class="show_bold">Shipping is free</span> ( Prime or $25+ of all other eligible items.)</p><br/>
+             <p><span class="show_bold"><%= @dealzon.am_title %></span> is on sale now for <span class="show_bold">$<%= @dealzon.am_price_is %></span> at Amazon. If you use this promo code(<span class="show_bold"><%= @dealzon.am_code %></span>), you could save <span class="show_bold"><%= @dealzon.am_price_sale %>% off</span> more.</p>
+             <% if @dealzon.am_shipping.present? %>
+              <div class="somthing_hidden"><%= @dealzon.am_shipping %></div>
+              <p><span class="show_bold">Shipping is free</span> ( Prime or $25+ of all other eligible items.)
+             <% end %>
+             </p><br/>
             <% else %>
              <% if @dealzon.acategory_id == 1 %> 
              
@@ -104,7 +108,7 @@
                 <ol>
                   <li>Click "Copy code & Open site"</li>
                   <li>Click "Buy Now or Add to Cart"</li>
-                  <li>Proceed with payment then the code is automatically applied.</li>
+                  <li>Proceed with payment then the code(<span class="show_bold"><%= @dealzon.am_code %></span>) is automatically applied.</li>
                 </ol>
               </div>
             <% end %>
