--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -60,7 +60,7 @@
              <% else %>
               <% if event.ecategory_id == 3 %>
                <ul>
-                <li><%= event.eb_price_sale %>% Off</li>
+                <li><%= event.eb_price_sale %>% off more</li>
                </ul>
               <% else %>
                <ul>
@@ -70,7 +70,7 @@
               <% end %>
              <% end %>
              <div class="index_button">
-               <a class="button primary fit" href="events/<%= event.id %>">See More Detail</a>
+               <a class="button fit" href="events/<%= event.id %>">See More Detail</a>
              </div>  
             </div> 
           </div>
