--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -7,7 +7,26 @@
 
   <!-- Main -->
     <section class="main">
-     <%= render 'form' %>
+     <%= simple_form_for @post do |f| %>
+       <div class="form_section">
+         <%= f.collection_select :category_id, Category.all, :id, :name, {prompt: "Choose a category"} %>
+         <%= f.input :post_title %>
+         <%= f.input :post_image %>
+         <%= f.input :post_link %>
+         <%= f.input :post_intro %>
+         <%= f.input :post_spare_21, as: :text, input_html: { class: 'ckeditor' }, label: "Description" %>
+         <%= f.input :post_price_is %>
+         <%= f.input :post_price_was %>
+         <%= f.select :post_spare_01, ([["No! It's not Crowdfunding", ""], "Yes! It's Crowdfunding"]) %>
+         <%= f.input :post_source %>
+         <%= f.input :post_youtube_01 %>
+         <%= f.input :post_youtube_02 %>
+         <%= f.input :post_review %>
+         <div class="form_button">   
+          <%= f.button :submit %>
+         </div>
+       </div>
+     <% end %>
     </section><!-- /.main -->
 
 </div><!-- /.warpper -->
