--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -18,7 +18,7 @@
 
         <section>
           
-          <p>Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla lorem.</p>
+          <p class="notice"><I>Our website contains affiliate link which means that if you click on one of the product links and buy we’ll receive a small commission. This help supports us and allows us to continue to keep finding and sharing good deals.</I></p>
         
           <div class="show_detail_wrap">
             <div class="show_left">
@@ -30,7 +30,7 @@
               <% if @post.post_spare_01.present? %>
                <div class="somthing_hidden"><%= @post.post_spare_01 %></div>
                <ul>
-                <li class="show_price_is">Crowdfunding</li>
+                <li class="show_crowdfunding">#crowdfunding.</li>
                </ul>
               <% else %>
                 <ul>
