--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,43 +5,30 @@
       <div class="about">
         <p>"Oh, i gotta buy this" only want to show the best deals, the coolest gadgets and the best inventions you can find and buy on the website. We`re not interested in spamming any boring or lame products at you. All you need to know is in our website, you are going to find a lot of coolest & awesome items and the best deals that you are most definitely going to like and perhaps even get tempted to buy some of them, so hang on tight to your wallet. Enjoy!</p>
 
-        <ul class="actions">
-         <li><a href="#" class="button">Learn More</a></li>
-        </ul>
+        <p>Please remember that we are not an actual webstore. We do not sell anything ourselves, and we do not ship anything ourselves. We cannot assist you with your purchase orders, and we do not know if a product can be shipped internationally.</p>
+
+        <!-- <ul class="actions">
+         <li><a href="/bridges/aboutUs" class="button">Learn More</a></li>
+        </ul> -->
 
       </div>
+
       <div class="team">
-        <article>
-          <span class="image"><img src="images/pic06.jpg" alt=""></span>
-          <p>
-            <strong class="name">John Doe</strong>
-            <span class="title">Lorem semper magna etiam</span>
-          </p>
-        </article>
-        <article>
-          <span class="image"><img src="images/pic07.jpg" alt=""></span>
-          <p>
-            <strong class="name">Jane Anderson</strong>
-            <span class="title">Etiam feugiat adipiscing veroeros</span>
-          </p>
-        </article>
-        <article>
-          <span class="image"><img src="images/pic08.jpg" alt=""></span>
-          <p>
-            <strong class="name">Mike Smith</strong>
-            <span class="title">Consequat nulla dolor blandit</span>
-          </p>
-        </article>
+        <p>"Oh,i gotta buy this" acknowledge some content in this process, the aim is to provide for the convenience to the user. By specifying the source, we respect other people`s rights, as well as to provide support for those who own the contents. Please let me know if your writing has been copied in a way that infringes on copyright infringement, and I will try to work hard to resolve this issue.<br/>
+        ** All These products in our website belong to the website owner and the product owner.</p>
+       
+        <p>Oh,igottabuythis is a participant in the Amazon Services LLC Associates Program & the Amazon EU Associates Programme, an affiliate advertising program designed to provide a means for us to earn fees by linking to Amazon.com, Amazon.ca, Amazon.co.uk and affiliated sites.</p>
       </div>
+
     </section>
     <section class="contact">
       <h3>Contact Us</h3>
       <ul class="contact-icons">
-        <li class="icon fa-home"><a href="#">1234 Somewhere Road #80486<br>Nashville, TN 00000</a></li>
-        <li class="icon fa-phone"><a href="#">(800) 555-0000 x12345</a></li>
-        <li class="icon fa-envelope"><a href="#">hello@untitled.tld</a></li>
-        <li class="icon fa-facebook"><a href="#">facebook.com/untitled-tld</a></li>
-        <li class="icon fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
+        <!-- <li class="icon fa-home"><a href="#">1234 Somewhere Road #80486<br>Nashville, TN 00000</a></li> -->
+        <!-- <li class="icon fa-phone"><a href="#">(800) 555-0000 x12345</a></li> -->
+        <li class="icon fa-envelope"><a href="#">ohigottabuythis@gmail.com</a></li>
+        <li class="icon fa-facebook"><a target="_blank" href="https://www.facebook.com/0higottabuythis">facebook</a></li>
+        <li class="icon fa-twitter"><a target="_blank" href="https://twitter.com/OhIgottabuythis">twitter</a></li>
       </ul>
     </section>
   </div>
