--- a/app/views/dealzons/edit.html.erb
+++ b/app/views/dealzons/edit.html.erb
@@ -3,6 +3,25 @@
 </header>
 <div class="wrapper">
   <section class="main">
-   <%= render 'form' %>
+   <%= simple_form_for @dealzon do |f| %>
+     <div class="form_section">
+       <%= f.collection_select :acategory_id, Acategory.all, :id, :name, {prompt: "Choose a category"} %><br/>
+       <%= f.select :am_expire, ([["Ongoing", ""], "This code & promotion has expired"]) %><br/>
+       <%= f.input :am_title %>
+       <%= f.input :am_category, label: "For related products on amazon"%>   
+       <%= f.input :am_image %>
+       <%= f.input :am_spare_21, as: :text, input_html: { class: 'ckeditor' }, label: "Description" %>
+       <%= f.input :am_review %>
+       <%= f.input :am_code %>
+       <%= f.input :am_date %>
+       <%= f.input :am_price_is %>
+       <%= f.select :am_shipping, ([["No! Shipping isn't free", ""], "Yes! Shipping is free"]) %><br/>
+       <%= f.input :am_price_was %>
+       <%= f.input :am_price_sale %>
+       <%= f.input :am_link %>
+       <br/>
+       <%= f.button :submit %>
+     </div>
+    <% end %>
   </section>
 </div>
