--- a/app/views/posts/_navbar.html.erb
+++ b/app/views/posts/_navbar.html.erb
@@ -31,10 +31,10 @@
 
     <% if can? :update, @post %>
      <li>
-       <a href="#" class="icon fa-angle-down">Admin & Create</a>
+       <a href="#" class="icon fa-angle-down">Create & Manage</a>
        <ul>
          <li>
-            <a href="/dealzons">Gadget & Deals</a>
+            <a href="/dealzons">Create</a>
             <ul>
              <li><%= link_to "Gadget", new_post_path %></li>
              <li><%= link_to "Amazon", new_dealzon_path %></li>
