--- a/app/views/ecategories/index.html.erb
+++ b/app/views/ecategories/index.html.erb
@@ -44,7 +44,7 @@
             <td><%= category.name %></td>
             <td><%= category.ecategory_id %></td>
             <td><%= link_to "Edit", edit_ecategory_path(category) %></td>
-            <td><%= link_to "Delete", ecategory_path(category), method: :delete, data: {confrim: "Are you sure?"} %></td>
+            <td><%= link_to "Delete", ecategory_path(category), method: :delete, data: {confirm: "Are you sure?"} %></td>
            </tr>
           <% end %>
         </table>
