--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -2,7 +2,11 @@
   <%= render 'posts/navbar' %> 
 </header>
 <div class="wrapper">
+  
   <section class="main">
+   <div class="form_section"> 
+    <h1>Edit Blog</h1>
+   </div>
    <%= render 'form' %>
   </section>
 </div>
