--- a/app/views/dealzons/_sidebar_index.html.erb
+++ b/app/views/dealzons/_sidebar_index.html.erb
@@ -11,15 +11,16 @@
           <a class="button btn-px open-modal" data-modal="modal">Quick Search</a>
           <div class="modal-wrapper" data-wrapper="modal-wrapper-large">
            <div class="modal-content">
-            <h2>Quick way to find the best deals</h2>
-            <p>Amazon offers thousands of great deals, but finding the best deal through endless pages might make you crazy. It offers a quick way to find the best deals on Amazon. You are going to get awesome deals just by clicking on the percentage off next to the category you want to browse.</p>
+            <div class="modal-intro">
+             <h2>Quick way to find the best deals</h2>
+             <p>Amazon offers thousands of great deals, but finding the best deal through endless pages might make you crazy. It offers a quick way to find the best deals on Amazon. You are going to get awesome deals just by clicking on the percentage off next to the category you want to browse.</p>
+            </div>
             <%= render 'shared/amazon_table' %>
            </div>
           </div>
         </div>
       </section>  
-     </section>
-
+    </section><br/>
     </section>
 
     <section>
