--- a/app/views/dealzons/_sidebar_show.html.erb
+++ b/app/views/dealzons/_sidebar_show.html.erb
@@ -2,6 +2,7 @@
 
     <section>
       
+      <section>
       <h2>AMAZON QUICK SEARCH</h2>
       <section data-group="modal-group">
         <div class="container">
@@ -19,8 +20,8 @@
           </div>
         </div>
       </section>  
+    </section><br/>
 
-    </section>
 
     <section>
 
