--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,13 +2,14 @@
   <%= render 'posts/navbar' %> 
 </header>
 
-<!-- Wrapper -->
 <div class="wrapper">
 
-  <!-- Main -->
-    <section class="main">
-     <%= render 'form' %>
-    </section><!-- /.main -->
+  <section class="main">
+   <div class="form_section">
+    <h1>Create New Gadget</h1>
+   </div>
+   <%= render 'form' %>
+  </section>
 
-</div><!-- /.warpper -->
+</div>
 
