--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -20,7 +20,7 @@
           <td><%= category.name %></td>
           <td><%= category.category_id %></td>
           <td><%= link_to "Edit", edit_category_path(category) %></td>
-          <td><%= link_to "Delete", category_path(category), method: :delete, data: {confrim: "Are you sure?"} %></td>
+          <td><%= link_to "Delete", category_path(category), method: :delete, data: {confirm: "Are you sure?"} %></td>
          </tr>
         <% end %>
       </table>
