--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -4,7 +4,7 @@
 <div class="wrapper">
   <section class="main">
    <div class="form_section"> 
-    <h2>Add New Category</h2>
+    <h2>Add New Category of Gadget</h2>
    </div>
    <%= render 'form' %>
   </section>
