--- a/app/views/dealzons/new.html.erb
+++ b/app/views/dealzons/new.html.erb
@@ -3,6 +3,9 @@
 </header>
 <div class="wrapper">
   <section class="main">
+   <div class="form_section"> 
+    <h1>Create New Deals of Amazon</h1>
+   </div>
    <%= render 'form' %>
   </section>
 </div>
