--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -4,6 +4,7 @@
 <div class="wrapper">
   <section class="main">
    <%= simple_form_for @event do |f| %>
+      <h1>Edit Deals of Amazon</h1>
       <div class="form_section">
        <%= f.collection_select :ecategory_id, Ecategory.all, :id, :name, {prompt: "Choose a category"} %><br/>
        <%= f.select :eb_expire, ([["Ongoing", ""], "This code has expired"]) %><br/>
