--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -2,7 +2,10 @@
   <%= render 'posts/navbar' %> 
 </header>
 <div class="wrapper">
-  <section class="main">
+  <section class="main">   
+   <div class="form_section"> 
+    <h1>Create New Deals of eBay</h1>
+   </div>
    <%= render 'form' %>
   </section>
 </div>
