--- a/app/views/posts/_banner.html.erb
+++ b/app/views/posts/_banner.html.erb
@@ -1,42 +1,13 @@
 <section id="banner">
   <article data-position="bottom right">
   <div class="inner">
-      <img src="https://pmcvariety.files.wordpress.com/2018/01/amazon-logo.jpg?w=1000" alt="">
-      <h2>Ultricies sed magna</h2>
-      <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor ipsum dolor.</p>
+      <img src="<%=asset_path 'amazon_banner_01.jpg' %>" alt="Deals of the Day of Amazon">
+      <h2>Deals of the Day</h2>
+      <p>Up To 80% Off Amazon everyday new deals</p>
       <ul class="actions">
-        <li><a class="button large" href="#">Magna sed dolor</a></li>
+        <li><a target="_blank" class="button large" href="https://amzn.to/2COwKbd">Learn More</a></li>
       </ul>
     </div>
   </article>
-  <article data-position="top right">
-    <div class="inner">
-      <img src="https://pmcvariety.files.wordpress.com/2018/04/amazon-prime.jpg?w=942" alt="">
-      <h2>Sed mattis nunc lorem</h2>
-      <p>Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida fringilla.</p>
-      <ul class="actions">
-        <li><a class="button large" href="#">Magna sed dolor</a></li>
-      </ul>
-    </div>
-  </article>
-  <article data-position="right">
-    <div class="inner">
-      <img src="https://www.aljazeera.com/mritems/imagecache/mbdxxlarge/mritems/Images/2018/4/27/ae839ff2f7d44a4ba89e6c2a868c8195_18.jpg" alt="">
-      <h2>Nisl sed vitae</h2>
-      <p>Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac magna consequat purus ipsum consequat.</p>
-      <ul class="actions">
-        <li><a class="button large" href="#">Magna sed dolor</a></li>
-      </ul>
-    </div>
-  </article>
-  <article data-position="center">
-    <div class="inner">
-      <img src="https://cnet1.cbsistatic.com/img/26OJWBUhPk5gUioraKPjBMLwdlE=/1600x900/2018/01/19/7dc289af-4771-4477-aae4-74a315373d2c/amazon-go-07378-010.jpg" alt="">
-      <h2>Porta ultricies consectetur</h2>
-      <p>Mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt lorem ipsum dolor sit amet. Magna tellus fusce tincidunt lorem.</p>
-      <ul class="actions">
-        <li><a class="button large" href="#">Magna sed dolor</a></li>
-      </ul>
-    </div>
-  </article>
+  
 </section>
