--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -60,7 +60,7 @@
              <% else %>
               <% if event.ecategory_id == 3 %>
                <ul>
-                <li><%= event.eb_price_sale %>% off more</li>
+                <li>+ <%= event.eb_price_sale %>% off more</li>
                </ul>
               <% else %>
                <ul>
