--- a/app/views/events/_sidebar_index.html.erb
+++ b/app/views/events/_sidebar_index.html.erb
@@ -115,68 +115,23 @@
    </section>
    <!-- Accordian -->
 
-
-   <!-- Blurb -->
-    <section>
-      <h2>Magna etiam</h2>
-      <p>Fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem sed euismod placerat. Vivamus porttitor et magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper lorem ipsum.</p>
-      <ul class="actions">
-        <li><a href="#" class="button">Learn More</a></li>
-      </ul>
-    </section>
-
   <!-- Featured posts -->
     <section class="featured-posts">
-      <h2>Sed aliquam</h2>
-      <article>
-        <a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
-        <header>
-          <span class="date">September 19, 2016</span>
-          <h3><a href="#">Non velit accumsan cursus gravida amet sapien</a></h3>
-        </header>
-        <p>Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis varius.</p>
-        <ul class="actions">
-          <li><a href="#" class="button">Continue Reading</a></li>
-        </ul>
-      </article>
-    </section>
-
-  <!-- Posts -->
-    <section>
-      <h2>Arcu dolore</h2>
-      <ul class="posts">
-        <li>
-          <a href="#">Etiam quis viverra lorem in semper lorem.</a>
-          <span class="date">September 15, 2016</span>
-        </li>
-        <li>
-          <a href="#">Sed nisl arcu euismod sit amet nisi euismod sed cursus elementum ipsum.</a>
-          <span class="date">September 15, 2016</span>
-        </li>
-        <li>
-          <a href="#">Arcu vivamus quis venenatis orci lorem.</a>
-          <span class="date">September 15, 2016</span>
-        </li>
-        <li>
-          <a href="#">Veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore magna.</a>
-          <span class="date">September 15, 2016</span>
-        </li>
-        <li>
-          <a href="#">Mauris neque quam, fermentum ut nisl vitae</a>
-          <span class="date">September 15, 2016</span>
-        </li>
-        <li>
-          <a href="#">Convallis maximus nisl sed mattis nunc id lorem euismod amet placerat.</a>
-          <span class="date">September 15, 2016</span>
-        </li>
-        <li>
-          <a href="#">Sed nisl arcu euismod sit amet nisi euismod sed cursus elementum ipsum.</a>
-          <span class="date">September 15, 2016</span>
-        </li>
-      </ul>
-      <ul class="actions">
-        <li><a href="#" class="button">More Posts</a></li>
-      </ul>
+      <h2>LATEST BLOG</h2>
+      <% @blogs.each do |blog| %>
+        <article>
+          <a href="#" class="image fit"><img src="<%= blog.blog_image %>" alt=""></a>
+          <header>
+            <span class="date"><%= blog.blog_date %></span>
+            <!-- <h3><a href="#"><%= blog.blog_title %></a></h3> -->
+            <h3><%= link_to blog.blog_title, blog %></h3>
+          </header>
+          <p><%= blog.blog_intro %></p>
+          <ul class="actions">
+            <li><a href="/blogs/<%= blog.id %>" class="button">Continue Reading</a></li>
+          </ul>
+        </article>
+      <% end %>
     </section>
 
 </aside>
