--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -32,7 +32,7 @@
       </ul>
     </section>
   </div>
-  <div class="copyright">
+<!--   <div class="copyright">
     &copy; Untitled. All rights reserved.
-  </div>
+  </div> -->
 </footer>
