--- a/app/views/blogs/_sidebar_index.html.erb
+++ b/app/views/blogs/_sidebar_index.html.erb
@@ -1,114 +1,116 @@
 <aside class="sidebar">
+  <section>
 
-  <!-- Blurb -->
-    <section>
-      <h2>Magna etiam</h2>
-      <p>Fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem sed euismod placerat. Vivamus porttitor et magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper lorem ipsum.</p>
-      <ul class="actions">
-        <li><a href="#" class="button">Learn More</a></li>
-      </ul>
-    </section>
+   <section>
+    <h3>AMAZON QUICK SEARCH</h3>
+    <section data-group="modal-group">
+      <div class="container">
+        <a href="#" class="image fit"><img src="https://pmcvariety.files.wordpress.com/2018/01/amazon-logo.jpg?w=1000" alt=""></a>
+        <p>Amazon offers thousands of great deals, but finding the best deal through endless pages might make you crazy. It offers a quick way to find the best deals on Amazon.</p>
+        <a class="button btn-px open-modal" data-modal="modal">Quick Search</a>
+        <div class="modal-wrapper" data-wrapper="modal-wrapper-large">
+         <div class="modal-content">
+          <div class="modal-intro">
+           <h2>Quick way to find the best deals</h2>
+           <p>Amazon offers thousands of great deals, but finding the best deal through endless pages might make you crazy. It offers a quick way to find the best deals on Amazon. You are going to get awesome deals just by clicking on the percentage off next to the category you want to browse.</p>
+          </div>
+          <%= render 'shared/amazon_table' %>
+         </div>
+        </div>
+      </div>
+    </section>  
+   </section><br/>
 
-  <!-- Featured posts -->
-    <section class="featured-posts">
-      <h2>Sed aliquam</h2>
-      <article>
-        <a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
-        <header>
-          <span class="date">September 19, 2016</span>
-          <h3><a href="#">Non velit accumsan cursus gravida amet sapien</a></h3>
-        </header>
-        <p>Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis varius.</p>
-        <ul class="actions">
-          <li><a href="#" class="button">Continue Reading</a></li>
-        </ul>
-      </article>
-    </section>
+  </section>
 
-  <!-- Posts -->
-    <section>
-      <h2>Arcu dolore</h2>
-      <ul class="posts">
-        <li>
-          <a href="#">Etiam quis viverra lorem in semper lorem.</a>
-          <span class="date">September 15, 2016</span>
-        </li>
-        <li>
-          <a href="#">Sed nisl arcu euismod sit amet nisi euismod sed cursus elementum ipsum.</a>
-          <span class="date">September 15, 2016</span>
-        </li>
-        <li>
-          <a href="#">Arcu vivamus quis venenatis orci lorem.</a>
-          <span class="date">September 15, 2016</span>
-        </li>
-        <li>
-          <a href="#">Veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore magna.</a>
-          <span class="date">September 15, 2016</span>
-        </li>
-        <li>
-          <a href="#">Mauris neque quam, fermentum ut nisl vitae</a>
-          <span class="date">September 15, 2016</span>
-        </li>
-        <li>
-          <a href="#">Convallis maximus nisl sed mattis nunc id lorem euismod amet placerat.</a>
-          <span class="date">September 15, 2016</span>
-        </li>
-        <li>
-          <a href="#">Sed nisl arcu euismod sit amet nisi euismod sed cursus elementum ipsum.</a>
-          <span class="date">September 15, 2016</span>
-        </li>
-      </ul>
-      <ul class="actions">
-        <li><a href="#" class="button">More Posts</a></li>
-      </ul>
-    </section>
-     
-     <section>
-     <h2>Arcu dolore</h2>
+  <section>
+     <h3>POPULAR BLOG</h3>
      <div id="sidebar">
-      <ul id="side-rcnt-thumb-post-list">
-
-        <li>
-          <div class="srtpl-l">
-            <a href="#" class="srtpl-a"><img class="srtpl-thumb" src="//source.unsplash.com/500x304" alt=""></a>
-          </div>
-          <div class="srtpl-r">
-              <a href="#" class="srtpl-n">Photo Gallery with PHP, MySQL, ImageMagick and jQuery</a>
-          </div>
-        </li>
-
-        <li class="srtpl-li">
-          <div class="srtpl-l">
-              <a href="#" class="srtpl-a"><img class="srtpl-thumb" src="//source.unsplash.com/500x304" alt=""></a>
-          </div>
-          <div class="srtpl-r">
-              <a href="#" class="srtpl-n">Advanced search form with PHP and MySQL</a>
-          </div>
-        </li>
-
-        <li class="srtpl-li">
-          <div class="srtpl-l">
-              <a href="#" class="srtpl-a"><img class="srtpl-thumb" src="//source.unsplash.com/500x304" alt=""></a>
-          </div>
-          <div class="srtpl-r">
-              <a href="#" class="srtpl-n">Secure Online Contact Form with Attachment</a>
-          </div>
-        </li>
-
-        <li class="srtpl-li">
-          <div class="srtpl-l">
-              <a href="#" class="srtpl-a"><img class="srtpl-thumb" src="//source.unsplash.com/500x304" alt=""></a>
-          </div>
-          <div class="srtpl-r">
-              <a href="#" class="srtpl-n">Photo Gallery with Image Tagging</a>
-          </div>
-        </li>
-
+      <ul id="side-rcnt-thumb-post-list">      
+        <% @blog_side.each do |blog| %>
+          <li>
+            <div class="srtpl-l">
+              <%= link_to (image_tag blog.blog_image), blog, :class => "srtpl-a" %>        
+            </div>
+            <div class="srtpl-r">
+              <%= link_to blog.blog_title, blog, :class => "srtpl-n" %>
+            </div>
+          </li>
+        <% end %>
       </ul>
     </div><br/>
-    <ul class="actions">
-      <li><a href="#" class="button">Learn More</a></li>
+   </section>
+
+
+  <section>
+   <h3>POPULAR GADGETS</h3>
+   <div id="sidebar">
+    <ul id="side-rcnt-thumb-post-list">
+      <% @post_side.each do |ps| %>
+        <li>
+          <div class="srtpl-l">
+            <%= link_to (image_tag ps.post_image), ps, :class => "srtpl-a" %>
+       <!-- <a href="#" class="srtpl-a"><img class="srtpl-thumb" src="<%= ps.post_image %>" alt=""></a> -->
+          </div>
+          <div class="srtpl-r">
+            <p><%= ps.category.name %></p>
+            <%= link_to ps.post_title, ps, :class => "srtpl-n" %>
+          </div>
+        </li>
+      <% end %>
     </ul>
-    </section>
+  </div><br/>
+  
+   <ul class="actions">
+    <li><a href="/posts" class="button">Learn More</a></li>
+   </ul>
+  </section>
+
+  <section>
+   <h3>POPULAR DEALS ON AMAZON</h3>
+   <div id="sidebar">
+    <ul id="side-rcnt-thumb-post-list">      
+      <% @dealzon_side.each do |ds| %>
+        <li>
+          <div class="srtpl-l">
+            <%= link_to (image_tag ds.am_image), ds, :class => "srtpl-a" %>        
+          </div>
+          <div class="srtpl-r">
+            <p><%= ds.acategory.name %></p>
+            <%= link_to ds.am_title, ds, :class => "srtpl-n" %>
+          </div>
+        </li>
+      <% end %>
+    </ul>
+  </div><br/>
+  
+   <ul class="actions">
+    <li><a href="/dealzons" class="button">Learn More</a></li>
+   </ul>
+  </section>
+
+   <section>
+     <h3>POPULAR DEALS ON EBAY</h3>
+     <div id="sidebar">
+      <ul id="side-rcnt-thumb-post-list">
+        <% @event_side.each do |eventside| %>
+          <li>
+            <div class="srtpl-l">
+              <%= link_to (image_tag eventside.eb_image), eventside, :class => "srtpl-a" %>        
+            </div>
+            <div class="srtpl-r">
+              <p><%= eventside.ecategory.name %></p>
+              <%= link_to eventside.eb_title, eventside, :class => "srtpl-n" %>
+            </div>
+          </li>
+        <% end %>
+      </ul>
+    </div><br/>
+    
+    <ul class="actions">
+      <li><a href="/events" class="button">Learn More</a></li>
+    </ul>
+   </section>
+
 
 </aside>
