--- a/app/views/dealzons/_sidebar_show.html.erb
+++ b/app/views/dealzons/_sidebar_show.html.erb
@@ -3,7 +3,7 @@
     <section>
       
       <section>
-      <h2>AMAZON QUICK SEARCH</h2>
+      <h3>AMAZON QUICK SEARCH</h3>
       <section data-group="modal-group">
         <div class="container">
           <a href="#" class="image fit"><img src="https://pmcvariety.files.wordpress.com/2018/01/amazon-logo.jpg?w=1000" alt=""></a>
@@ -46,7 +46,7 @@
     </section>
 
     <section>
-     <h2>POPULAR DEALS</h2>
+     <h3>POPULAR DEALS</h3>
      <div id="sidebar">
       <ul id="side-rcnt-thumb-post-list">      
         <% @dealzon_side.each do |ds| %>
@@ -64,7 +64,7 @@
     </div><br/>
     
     <ul class="actions">
-      <li><a href="#" class="button">Learn More</a></li>
+      <li><a href="/dealzons" class="button">Learn More</a></li>
     </ul>
    </section>
 
@@ -163,7 +163,7 @@
 
   <!-- Featured posts -->
     <section class="featured-posts">
-      <h2>LATEST BLOG</h2>
+      <h3>LATEST BLOG</h3>
       <% @blogs.each do |blog| %>
         <article>
           <a href="#" class="image fit"><img src="<%= blog.blog_image %>" alt=""></a>
