--- a/app/views/events/_navbar.html.erb
+++ b/app/views/events/_navbar.html.erb
@@ -56,6 +56,7 @@
            <li><%= link_to "Gadget", new_category_path %></li>
            <li><%= link_to "Amazon", new_acategory_path %></li>
            <li><%= link_to "eBay", new_ecategory_path %></li>
+           <li><%= link_to "Blog", new_bcategory_path %></li>
           </ul>
          </li>
          <li>
@@ -64,6 +65,7 @@
            <li><%= link_to "Gadget", categories_path %></li>
            <li><%= link_to "Amazon", acategories_path %></li>
            <li><%= link_to "eBay", ecategories_path %></li>
+           <li><%= link_to "Blog", bcategories_path %></li>
           </ul>
          </li>    
          <% if user_signed_in? %>
