--- a/app/views/posts/_navbar.html.erb
+++ b/app/views/posts/_navbar.html.erb
@@ -34,7 +34,7 @@
        <a href="#" class="icon fa-angle-down">Create & Manage</a>
        <ul>
          <li>
-            <a href="/dealzons">Create</a>
+            <a href="#">Create</a>
             <ul>
              <li><%= link_to "Gadget", new_post_path %></li>
              <li><%= link_to "Amazon", new_dealzon_path %></li>
@@ -43,7 +43,7 @@
             </ul>
          </li>
          <li>
-          <a href="/dealzons">Create category</a>
+          <a href="#">Create category</a>
           <ul>
            <li><%= link_to "Gadget", new_category_path %></li>
            <li><%= link_to "Amazon", new_acategory_path %></li>
@@ -52,7 +52,7 @@
           </ul>
          </li>
          <li>
-          <a href="/dealzons">Manage category</a>
+          <a href="#">Manage category</a>
           <ul>
            <li><%= link_to "Gadget", categories_path %></li>
            <li><%= link_to "Amazon", acategories_path %></li>
