--- a/app/views/events/_navbar.html.erb
+++ b/app/views/events/_navbar.html.erb
@@ -42,7 +42,7 @@
        <a href="#" class="icon fa-angle-down">Admin & Create</a>
        <ul>
          <li>
-            <a href="/dealzons">Gadget & Deals</a>
+            <a href="#">Create</a>
             <ul>
              <li><%= link_to "Gadget", new_post_path %></li>
              <li><%= link_to "Amazon", new_dealzon_path %></li>
@@ -51,7 +51,7 @@
             </ul>
          </li>
          <li>
-          <a href="/dealzons">Create category</a>
+          <a href="#">Create category</a>
           <ul>
            <li><%= link_to "Gadget", new_category_path %></li>
            <li><%= link_to "Amazon", new_acategory_path %></li>
@@ -60,7 +60,7 @@
           </ul>
          </li>
          <li>
-          <a href="/dealzons">Manage category</a>
+          <a href="#">Manage category</a>
           <ul>
            <li><%= link_to "Gadget", categories_path %></li>
            <li><%= link_to "Amazon", acategories_path %></li>
