--- a/app/assets/stylesheets/dealzons.scss
+++ b/app/assets/stylesheets/dealzons.scss
@@ -173,8 +173,11 @@
 }
 .amazon_table {
   width: 100%;
-  overflow-y: scroll;
-  
+  overflow-y: scroll;  
+}
+.price_weight {
+  font-size: 1.2em;
+  font-weight: bold;
 }
 
 
