--- a/app/views/dealzons/_sidebar_index.html.erb
+++ b/app/views/dealzons/_sidebar_index.html.erb
@@ -52,7 +52,7 @@
         <section>
          <div id="sidebar">
           <ul id="side-rcnt-thumb-post-list">
-            <% @dealzon_side.each do |deal_sale| %>
+            <% @dealzon_sale.each do |deal_sale| %>
               <% if deal_sale.acategory_id == 1 %> 
                 <li>
                   <div class="srtpl-l">
@@ -73,7 +73,7 @@
         <section>
          <div id="sidebar">
           <ul id="side-rcnt-thumb-post-list">
-            <% @dealzon_side.each do |deal_deal| %>
+            <% @dealzon_deal.each do |deal_deal| %>
               <% if deal_deal.acategory_id == 2 %> 
                 <li>
                   <div class="srtpl-l">
@@ -94,7 +94,7 @@
         <section>
          <div id="sidebar">
           <ul id="side-rcnt-thumb-post-list">
-            <% @dealzon_side.each do |deal_promotion| %>
+            <% @dealzon_promotion.each do |deal_promotion| %>
               <% if deal_promotion.acategory_id == 3 %> 
                 <li>
                   <div class="srtpl-l">
@@ -115,7 +115,7 @@
         <section>
          <div id="sidebar">
           <ul id="side-rcnt-thumb-post-list">
-            <% @dealzon_side.each do |deal_code| %>
+            <% @dealzon_code.each do |deal_code| %>
               <% if deal_code.acategory_id == 4 %> 
                 <li>
                   <div class="srtpl-l">
