--- a/app/views/dealzons/_sidebar_show.html.erb
+++ b/app/views/dealzons/_sidebar_show.html.erb
@@ -69,7 +69,7 @@
    </section>
 
    <!-- Accordian -->
-   <section>
+   <!-- <section>
     <h3>POPULAR DEALS BY CATEGORY</h3>
      <ul id="accord1" class="accordian">
       <li>
@@ -157,7 +157,7 @@
         </section>
       </li>
     </ul>
-   </section>
+   </section> -->
    <!-- Accordian -->
 
 
