--- a/app/views/events/_sidebar_index.html.erb
+++ b/app/views/events/_sidebar_index.html.erb
@@ -21,7 +21,7 @@
    </section>
    
    <!-- Accordian -->
-   <section>
+   <!-- <section>
      <h3>POPULAR DEALS BY CATEGORY</h3>
      <ul id="accord1" class="accordian">
       <li>
@@ -109,7 +109,7 @@
         </section>
       </li>
     </ul>
-   </section>
+   </section> -->
    <!-- Accordian -->
 
   <!-- Featured posts -->
