--- a/app/views/events/_sidebar_show.html.erb
+++ b/app/views/events/_sidebar_show.html.erb
@@ -24,7 +24,7 @@
    </section>
    
    <!-- Accordian -->
-   <section>
+   <!-- <section>
      <h3>POPULAR DEALS BY CATEGORY</h3>
      <ul id="accord1" class="accordian">
       <li>
@@ -112,7 +112,7 @@
         </section>
       </li>
     </ul>
-   </section>
+   </section> -->
    <!-- Accordian -->
 
   <!-- Featured posts -->
