--- a/app/views/posts/_sidebar.html.erb
+++ b/app/views/posts/_sidebar.html.erb
@@ -45,7 +45,7 @@
   </section>
 
 <!-- Accordian -->
-   <section>
+   <!-- <section>
      <h3>POPULAR DEALS BY CATEGORY</h3>
      <ul id="accord1" class="accordian">
       <li>
@@ -154,7 +154,7 @@
         </section>
       </li>
     </ul>
-   </section>
+   </section> -->
    <!-- Accordian -->
 
    <!-- Featured posts -->
